# jabberhive-irc

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile_libircclient  README.md  run.sh
cmake_modules/: FindLibIRCClient.cmake  LibFindMacros.cmake
src/: CMakeLists.txt  Makefile  main.c  pervasive.h
src/irc/: CMakeLists.txt  irc.c  irc.h  irc_event_handlers.h  irc_handle_connected.c  irc_handle_dcc_events.c  irc_receive.c  irc_select.c  irc_send.c  irc_types.h
src/meta_net/: CMakeLists.txt  meta_net.c  meta_net.h  meta_net_handle_reply.c  meta_net_select.c  meta_net_try_request.c  meta_net_types.h
src/parameters/: CMakeLists.txt  parameters.c  parameters.h  parameters_getters.c  parameters_types.h
